force-app/main/default/objects/ApprovalWorkItemClone__c/ApprovalWorkItemClone__c.object-meta.xml
<CustomObject>
    <label>ApprovalWorkItemClone</label>
    <nameField>
        <label>ApprovalWorkItemClone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ApprovalWorkItemClones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>