force-app/main/default/objects/ApprovalWorkItemClone__c/fields/OriginalID__c.field-meta.xml
<CustomField>
    <fullName>OriginalID__c</fullName>
    <label>OriginalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>