force-app/main/default/objects/ApprovalWorkItemClone__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Record</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ApprovalWorkItemClones</relationshipLabel>
    <relationshipName>ApprovalWorkItemClones</relationshipName>
    <type>Lookup</type>
</CustomField>