force-app/main/default/objects/ApprovalWorkItemClone__c/fields/ReviewedById__c.field-meta.xml
<CustomField>
    <fullName>ReviewedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ReviewedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApprovalWorkItemClones</relationshipName>
    <type>Lookup</type>
</CustomField>