force-app/main/default/objects/ApprovalWorkItemClone__c/fields/ReviewedDate__c.field-meta.xml
<CustomField>
    <fullName>ReviewedDate__c</fullName>
    <label>Reviewed Date</label>
    <type>DateTime</type>
</CustomField>